--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
     "firebase": "^11.5.0",
     "next": "15.2.4",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.1.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -25,7 +28,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
